# hyperspherical

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tests.yml
hyperspherical/: __init__.py
hyperspherical/initializers/: __init__.py  spherical_init.py
hyperspherical/layers/: convspherical.py  spherical.py
hyperspherical/utils/: __init__.py
tests/test_initializers/: test_spherical_init_kmeans.py  test_spherical_init_random.py
tests/test_utils/: test_radius.py
