[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperspherical"
version = "0.1.0"
description = "Hyperspherical neural network layers for PyTorch"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Christophe Saint-Jean", email = "christophe.saint-jean@univ-lr.fr" }
]
dependencies = [
    "torch>=2.0",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/christophesaintjean/hyperspherical"
Documentation = "https://christophesaintjean.github.io/hyperspherical"
Issues = "https://github.com/christophesaintjean/hyperspherical/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["hyperspherical"]
combine_as_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]   # erreurs, warnings, flake8, imports
ignore = ["E501"]               # on laisse Black gérer les longueurs de ligne


[tool.flake8]
max-line-length = 100

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "flake8",
    "black",
]
